Update web thay tuan - Dong Hung HY

--- a/teacher/nguyen-anh-tuan.html
+++ b/teacher/nguyen-anh-tuan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thầy Đào Xuân Việt - Taylaimoi</title>
+    <title>Thầy Nguyễn Anh Tuấn - Taylaimoi</title>
     <meta name="description" content="600 Câu Hỏi Sát Hạch Lái Xe 2025 - Ôn thi lý thuyết bằng lái xe hạng B, C1,C, D,D1,D2 với bộ đề chuẩn của Bộ Công An">
     <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
     <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
@@ -98,11 +98,11 @@
         <!-- Instructor Profile -->
         <section class="instructor-profile">
             <div class="profile-header">
-                <img src="../image/Teacher/Daoxuanviet/avatar.webp" alt="Thầy Đào Xuân Việt" class="profile-avatar">
-                <h1 class="instructor-name">Thầy Đào Xuân Việt</h1>
+                <img src="../image/Teacher/Nguyenanhtuan/avatar_thay_tuan.webp" alt="Thầy Nguyễn Anh Tuấn" class="profile-avatar">
+                <h1 class="instructor-name">Thầy Nguyễn Anh Tuấn</h1>
                 <p class="instructor-title">Giảng viên đào tạo lái xe chuyên nghiệp tại Taylaimoi.com</p>
                 <div class="experience-badge">
-                    <i class="fas fa-award"></i> 6 năm kinh nghiệm
+                    <i class="fas fa-award"></i> 3+ năm kinh nghiệm
                 </div>
                 <div class="rating-stars">
                     <i class="fas fa-star"></i>
@@ -111,7 +111,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="rating-text">4.8/5 (200 đánh giá)</div>
+                <div class="rating-text">4.8/5 (168 đánh giá)</div>
             </div>
 
             <div class="profile-body">
@@ -124,7 +124,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Địa chỉ chi nhánh</div>
-                                <div class="contact-value">212 Tổ 8 Quyết Thắng, Yên Nghĩa, Hà Đông, Hà Nội</div>
+                                <div class="contact-value">Khu đô thị Tây QL10, xã Đông Hưng, tỉnh Hưng Yên</div>
                             </div>
                         </div>
 
@@ -134,8 +134,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Điện thoại</div>
-                                <div class="contact-value">
-                                    <a href="tel:+0343550666" style="font-size: 18px; font-weight: 600; color: var(--primary);">0343.550.666</a></div>
+                                <div class="contact-value"><a href="tel:+0962952777" style="font-size: 18px; font-weight: 600; color: var(--primary);">0962.952.777</a></div>
                             </div>
                         </div>
 
@@ -165,7 +164,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Học viên đã đào tạo</div>
-                                <div class="contact-value">500+ học viên</div>
+                                <div class="contact-value">300+ học viên</div>
                             </div>
                         </div>
 
@@ -175,7 +174,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Tỷ lệ thi đỗ</div>
-                                <div class="contact-value">95% học viên đỗ ngay lần đầu</div>
+                                <div class="contact-value">96% học viên đỗ ngay lần đầu</div>
                             </div>
                         </div>
                     </div>
@@ -185,42 +184,50 @@
                     <h2 class="section-title">Hình Ảnh Giảng Dạy</h2>
                     <div class="gallery-grid">
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_cn.jpg" alt="Giảng dạy thực hành" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_1.webp" alt="Giảng dạy thực hành" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_2.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_2.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_3.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_3.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_4.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_4.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_5.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_10.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_6.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_6.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_7.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_7.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_8.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <img src="../image/Teacher/Nguyenanhtuan/Img_thaytuan_8.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của giảng viênh</div>
+                        </div>
+                        <div class="gallery-item">
+                            <img src="../image/Teacher/Nguyenanhtuan/img_thaytuan_9.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của giảng viênh</div>
+                        </div>
+                        <div class="gallery-item">
+                            <img src="../image/Teacher/Nguyenanhtuan/img_thaytuan_16.webp" alt="Hình ảnh của giảng viên" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viênh</div>
                         </div>
                     </div>
@@ -307,7 +314,6 @@
                 <!-- Reviews List -->
                 <div class="reviews-list" id="reviewsList">
                     <!-- Reviews will be added here by JavaScript -->
-
                 </div>
             </div>
         </section>
@@ -767,7 +773,7 @@
                 return;
             }
 
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbzEuKmzUCBLybOCnGVvT6_GmjWBnbyORu-HH8Fb21_U94hSjWIh7vI1cAG-4FvI71ia/exec';
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbx9qDKe0_OdcQXxngLQcQO9g0ivvW61axuHgbj7DMlmmLwz9ENibb7s-W2TWyR8CYpT/exec';
 
             form.addEventListener('submit', async function(e) {
                 e.preventDefault();
@@ -905,25 +911,25 @@
         // Add sample reviews on page load
         function addSampleReviews() {
             const sampleReviews = [{
-                name: "Nguyễn Thị Dương",
+                name: "Nguyễn Văn An",
                 rating: 5,
-                comment: "Thầy Việt dạy rất tận tâm và chi tiết. Tôi cảm thấy tự tin hơn rất nhiều khi lái xe sau khóa học. Cảm ơn thầy rất nhiều!",
-                date: "15/11/2025"
+                comment: "Thầy Tuấn dạy rất tận tâm và chi tiết. Tôi cảm thấy tự tin hơn rất nhiều khi lái xe sau khóa học. Cảm ơn thầy rất nhiều!",
+                date: "20/01/2025"
             }, {
                 name: "Hoàng Thị Oanh",
                 rating: 5,
-                comment: "Khóa học của thầy Việt thật tuyệt vời! Thầy không chỉ giảng dạy kỹ năng lái xe mà còn chia sẻ nhiều kinh nghiệm quý báu. Tôi đã học được rất nhiều điều bổ ích.",
+                comment: "Khóa học của thầy Tuấn thật tuyệt vời! Thầy không chỉ giảng dạy kỹ năng lái xe mà còn chia sẻ nhiều kinh nghiệm quý báu. Tôi đã học được rất nhiều điều bổ ích.",
                 date: "15/11/2025"
             }, {
-                name: "Lê Văn Hùng",
+                name: "Lê Minh Hùng",
                 rating: 5,
-                comment: "Thầy Việt rất nhiệt tình và có phương pháp giảng dạy dễ hiểu. Tôi đã thi đỗ ngay lần đầu tiên! Thầy luôn kiên nhẫn hướng dẫn từng chi tiết nhỏ.",
+                comment: "Thầy Tuấn rất nhiệt tình và có phương pháp giảng dạy dễ hiểu. Tôi đã thi đỗ ngay lần đầu tiên! Thầy luôn kiên nhẫn hướng dẫn từng chi tiết nhỏ.",
                 date: "15/12/2024"
             }, {
-                name: "Huỳnh Minh Tuấn",
+                name: "Bùi Thị Lan",
                 rating: 5,
-                comment: "Tôi rất ấn tượng với cách thầy Việt giảng dạy. Thầy không chỉ truyền đạt kiến thức mà còn tạo động lực cho học viên. Cảm ơn thầy đã giúp tôi trở thành một tài xế tự tin!",
-                date: "20/12/2024"
+                comment: "Tôi rất hài lòng với cách dạy của thầy Tuấn. Thầy luôn tạo không khí học tập vui vẻ và thoải mái. Cảm ơn thầy đã giúp tôi vượt qua nỗi sợ lái xe!",
+                date: "05/01/2025"
             }, {
                 name: "Trần Thị Mai",
                 rating: 4,
