--- a/teacher/nguyen-anh-tuan.html
+++ b/teacher/nguyen-anh-tuan.html
@@ -75,18 +75,18 @@
 
     <div class="container" style="padding: 0;">
         <ul class="main-menu" id="mainMenu">
-            <li><a href="../index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
-            <li><a href="../Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
+            <li><a href="https://letuantbvn.github.io/600cauhoisathach.2025/index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
+            <li><a href="https://letuantbvn.github.io/600cauhoisathach.2025/Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle"><i class="fa-solid fa-car"></i> Thực hành <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="../Sahinh.html"><i class="fa-solid fa-book"></i> 11 Bài sa hình</a></li>
+                    <li><a href="https://letuantbvn.github.io/600cauhoisathach.2025/Sahinh.html"><i class="fa-solid fa-book"></i> 11 Bài sa hình</a></li>
                     <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
                 </ul>
             </li>
-            <li><a href="../Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
-            <li><a href="../Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
-            <li><a href="../Laisomhocduong.html"><i class="fa-solid fa-graduation-cap"></i> Lái sớm học đường</a></li>
+            <li><a href="https://letuantbvn.github.io/600cauhoisathach.2025/Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
+            <li><a href="https://letuantbvn.github.io/600cauhoisathach.2025/Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
+            <li><a href="https://letuantbvn.github.io/600cauhoisathach.2025/Laisomhocduong.html"><i class="fa-solid fa-graduation-cap"></i> Lái sớm học đường</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
 
         </ul>
