--- a/teacher/Dao-xuan-viet.html
+++ b/teacher/Dao-xuan-viet.html
@@ -80,7 +80,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle"><i class="fa-solid fa-car"></i> Thực hành <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="Sahinh.html"><i class="fa-solid fa-book"></i> 11 Bài sa hình</a></li>
+                    <li><a href="../Sahinh.html"><i class="fa-solid fa-book"></i> 11 Bài sa hình</a></li>
                     <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
                 </ul>
             </li>
