--- a/Laisomhocduong.html
+++ b/Laisomhocduong.html
@@ -17,10 +17,10 @@
 <style>
     .section {
         margin-bottom: 60px;
-        background: var(--white);
+        background: whitesmoke;
         border-radius: 12px;
         padding: 30px;
-        box-shadow: var(--shadow);
+        box-shadow: rgb(0 0 0 / 21%) 0px 5px 15px;
     }
     
     .section-title {
