--- a/teacher/nguyen-anh-tuan.html
+++ b/teacher/nguyen-anh-tuan.html
@@ -75,7 +75,7 @@
 
     <div class="container" style="padding: 0;">
         <ul class="main-menu" id="mainMenu">
-            <li><a href="../index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
+            <li><a href="letuantbvn.github.io/600cauhoisathach.2025/index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
             <li><a href="../Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle"><i class="fa-solid fa-car"></i> Thực hành <i class="fas fa-chevron-down"></i></a>
