--- a/Laisomhocduong.html
+++ b/Laisomhocduong.html
@@ -454,9 +454,17 @@
         </div>
     </nav>
 
+    <!-- Main Menu -->
     <div class="container" style="padding: 0;">
         <ul class="main-menu" id="mainMenu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle"><i class="fa-solid fa-circle-info"></i> Về chúng tôi <i class="fas fa-chevron-down"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="Gallery.html"><i class="fa-solid fa-book"></i> Thư viện ảnh</a></li>
+                    <li><a href="list-teacher.html" target="_blank"><i class="fa-solid fa-circle-user"></i> Các giảng viên</a></li>
+                </ul>
+            </li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle"><i class="fa-solid fa-car"></i> Thực hành <i class="fas fa-chevron-down"></i></a>
@@ -465,12 +473,14 @@
                     <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
                 </ul>
             </li>
-            <li><a href="Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
             <li><a href="Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
             <li><a href="Laisomhocduong.html"><i class="fa-solid fa-graduation-cap"></i> Lái sớm học đường</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
+
         </ul>
     </div>
+    <!-- End Main Menu -->
+
     <!-- Thêm nút đóng menu mobile -->
     <div class="menu-close" id="menuClose">
         <i class="fas fa-times"></i>
@@ -786,31 +796,55 @@
     </div>
 
     <!-- Partners Section -->
-    <section class=" partners-section ">
-        <div class="partners-container ">
-            <h2 class="partners-title ">ĐỐI TÁC TAYLAIMOI.COM</h2>
-            <div class="marquee-container ">
-                <div class="marquee-track ">
-                    <div class="partner-logo ">
-                        <img src="image/Logo/FPT-logo.png " alt="Partner 1 ">
+    <section class="partners-section">
+        <div class="partners-container">
+            <h2 class="partners-title">ĐỐI TÁC TAYLAIMOI.COM</h2>
+            <div class="marquee-container">
+                <div class="marquee-track">
+                    <!-- Row 1 -->
+                    <div class="partner-logo">
+                        <img src="image/Logo/FPT-logo.png" alt="Partner FPT">
                     </div>
-                    <div class="partner-logo ">
-                        <img src="image/Logo/Daidung-logo.png " alt="Partner Đại Dũng ">
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/Daidung-logo.png" alt="Partner Đại Dũng">
                     </div>
-                    <div class="partner-logo ">
-                        <img src="image/Logo/taylaimoi-logo.png " alt="Partner 3 ">
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/omoda.webp" alt="Partner Omoda">
                     </div>
-                    <div class="partner-logo ">
-                        <img src="image/Logo/Vinfast-logo.png " alt="Partner 2 ">
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
                     </div>
-                    <div class="partner-logo ">
-                        <img src="image/Logo/FPT-logo.png " alt="Partner 1 ">
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
                     </div>
-                    <div class="partner-logo ">
-                        <img src="image/Logo/taylaimoi-logo.png " alt="Partner 3 ">
+                    <!-- Row 2 -->
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
                     </div>
-                    <div class="partner-logo ">
-                        <img src="image/Logo/Vinfast-logo.png " alt="Partner 2 ">
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/Vinfast-logo.png" alt="Partner 2">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/Daidung-logo.png" alt="Partner Đại Dũng">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/omoda.webp" alt="Partner Omoda">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
                     </div>
                 </div>
             </div>
