--- a/Sahinh2.html
+++ b/Sahinh2.html
@@ -121,9 +121,17 @@
         </div>
     </nav>
 
+    <!-- Main Menu -->
     <div class="container" style="padding: 0;">
         <ul class="main-menu" id="mainMenu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle"><i class="fa-solid fa-circle-info"></i> Về chúng tôi <i class="fas fa-chevron-down"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="Gallery.html"><i class="fa-solid fa-book"></i> Thư viện ảnh</a></li>
+                    <li><a href="list-teacher.html" target="_blank"><i class="fa-solid fa-circle-user"></i> Các giảng viên</a></li>
+                </ul>
+            </li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle"><i class="fa-solid fa-car"></i> Thực hành <i class="fas fa-chevron-down"></i></a>
@@ -132,12 +140,13 @@
                     <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
                 </ul>
             </li>
-            <li><a href="Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
             <li><a href="Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
             <li><a href="Laisomhocduong.html"><i class="fa-solid fa-graduation-cap"></i> Lái sớm học đường</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
+
         </ul>
     </div>
+    <!-- End Main Menu -->
 
     <main class="container">
         <!-- PDF Viewer Section -->
