--- a/index.html
+++ b/index.html
@@ -126,9 +126,17 @@
         </div>
     </nav>
 
+    <!-- Main Menu -->
     <div class="container" style="padding: 0;">
         <ul class="main-menu" id="mainMenu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle"><i class="fa-solid fa-circle-info"></i> Về chúng tôi <i class="fas fa-chevron-down"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="Gallery.html"><i class="fa-solid fa-book"></i> Thư viện ảnh</a></li>
+                    <li><a href="list-teacher.html" target="_blank"><i class="fa-solid fa-circle-user"></i> Các giảng viên</a></li>
+                </ul>
+            </li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle"><i class="fa-solid fa-car"></i> Thực hành <i class="fas fa-chevron-down"></i></a>
@@ -137,13 +145,14 @@
                     <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
                 </ul>
             </li>
-            <li><a href="Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
             <li><a href="Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
             <li><a href="Laisomhocduong.html"><i class="fa-solid fa-graduation-cap"></i> Lái sớm học đường</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
 
         </ul>
     </div>
+    <!-- End Main Menu -->
+
     <main class="container">
         <section class="intro">
             <h1>600 CÂU HỎI SÁT HẠCH LÁI XE CƠ GIỚI ĐƯỜNG BỘ - 2025 - BỘ CÔNG AN </h1>
@@ -407,6 +416,9 @@
         </section>
 
     </main>
+
+
+    <!-- Partners Section -->
     <section class="partners-section">
         <div class="partners-container">
             <h2 class="partners-title">ĐỐI TÁC TAYLAIMOI.COM</h2>
@@ -414,7 +426,7 @@
                 <div class="marquee-track">
                     <!-- Row 1 -->
                     <div class="partner-logo">
-                        <img src="image/Logo/FPT-logo.png" alt="Partner 1">
+                        <img src="image/Logo/FPT-logo.png" alt="Partner FPT">
                     </div>
 
                     <div class="partner-logo">
@@ -422,7 +434,20 @@
                     </div>
 
                     <div class="partner-logo">
-                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner 3">
+                        <img src="image/Logo/omoda.webp" alt="Partner Omoda">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
+                    </div>
+                    <!-- Row 2 -->
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
                     </div>
 
                     <div class="partner-logo">
@@ -430,15 +455,19 @@
                     </div>
 
                     <div class="partner-logo">
-                        <img src="image/Logo/FPT-logo.png" alt="Partner 1">
+                        <img src="image/Logo/Daidung-logo.png" alt="Partner Đại Dũng">
                     </div>
 
                     <div class="partner-logo">
-                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner 3">
+                        <img src="image/Logo/omoda.webp" alt="Partner Omoda">
                     </div>
 
                     <div class="partner-logo">
-                        <img src="image/Logo/Vinfast-logo.png" alt="Partner 2">
+                        <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
                     </div>
                 </div>
             </div>
