--- a/list-teacher.html
+++ b/list-teacher.html
@@ -225,7 +225,7 @@
                             <span class="stat-label">Đánh giá</span>
                         </div>
                     </div>
-                    <a href="#" class="detail-btn">
+                    <a href="teacher/nguyen-anh-tuan.html" class="detail-btn">
                         Xem chi tiết <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
