--- a/teacher/nguyen-anh-tuan.html
+++ b/teacher/nguyen-anh-tuan.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="navbar-header">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/600cauhoisathach.2025/index.html">
                         <img src="../image/logo.png" alt="Logo thương hiệu Taylaimoi.com" class="logo-img">
                     </a>
                 </div>
