Update logo doi tac

--- a/Laisomhocduong.html
+++ b/Laisomhocduong.html
@@ -668,6 +668,12 @@
                     <div class="carousel-indicator"></div>
                 </div>
             </div>
+            <div style="margin-top: 20px; font-size: 1rem; padding: 15px; background: var(--light-gray); border-radius: 8px;">
+                <a href="https://anninhthudo.vn/lai-som-hoc-duong-phong-ngua-tai-nan-giao-thong-tu-goc-post631365.antd?brid=1pd4_9vDoRx3f88J6BaXTw" target="_blank"><i class="fa-solid fa-link"></i> <strong>Báo an ninh thủ đô:</strong> "Lái sớm học đường” - Phòng ngừa tai nạn giao thông từ gốc (01/12/2025)</a>
+            </div>
+            <div style="margin-top: 20px; font-size: 1rem; padding: 15px; background: var(--light-gray); border-radius: 8px;">
+                <a href="https://anninhthudo.vn/gieo-y-thuc-an-toan-giao-thong-tu-som-trong-hoc-duong-post631368.antd?brid=m8rs_9LFWRh7j5iq06Iixw" target="_blank"><i class="fa-solid fa-link"></i> <strong>Báo an ninh thủ đô:</strong> "Lái sớm học đường” - "Gieo” ý thức an toàn giao thông từ sớm trong học đường (01/12/2025)</a>
+            </div>
         </section>
 
         <!-- Hình ảnh buổi 1 -->
@@ -724,6 +730,13 @@
                     <div class="carousel-indicator"></div>
                     <div class="carousel-indicator"></div>
                 </div>
+            </div>
+
+            <div style="margin-top: 20px; font-size: 1rem; padding: 15px; background: var(--light-gray); border-radius: 8px;">
+                <a href="https://anninhthudo.vn/lai-som-hoc-duong-gieo-mam-van-hoa-giao-thong-an-toan-cho-hoc-sinh-post629187.antd?brid=fssjc6Mr_9IriTID5sv1Dg" target="_blank"><i class="fa-solid fa-link"></i> <strong>Báo an ninh thủ đô:</strong> “Lái sớm học đường” – gieo mầm văn hóa giao thông an toàn cho học sinh (07/11/2025)</a>
+            </div>
+            <div style="margin-top: 20px; font-size: 1rem; padding: 15px; background: var(--light-gray); border-radius: 8px;">
+                <a href="https://anninhthudo.vn/khi-hoc-sinh-tro-thanh-su-gia-van-hoa-giao-thong-post629210.antd?brid=m8rs_9LFWRh7j5iq06Iixw" target="_blank"><i class="fa-solid fa-link"></i> <strong>Báo an ninh thủ đô:</strong> Khi học sinh trở thành sứ giả văn hoá giao thông (07/11/2025)</a>
             </div>
         </section>
 
@@ -815,6 +828,10 @@
                     </div>
 
                     <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
+                    </div>
+
+                    <div class="partner-logo">
                         <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
                     </div>
 
@@ -845,6 +862,10 @@
 
                     <div class="partner-logo">
                         <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
                 </div>
             </div>
