--- a/teacher/nguyen-anh-tuan.html
+++ b/teacher/nguyen-anh-tuan.html
@@ -354,7 +354,11 @@
                     </div>
 
                     <div class="partner-logo">
-                        <img src="image/Logo/omoda.webp" alt="Partner Omoda">
+                        <img src="../image/Logo/omoda.webp" alt="Partner Omoda">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="../image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
 
                     <div class="partner-logo">
@@ -371,7 +375,7 @@
                     </div>
 
                     <div class="partner-logo">
-                        <img src="../image/Logo/Vinfast-logo.png" alt="Partner 2">
+                        <img src="../image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
                     </div>
 
                     <div class="partner-logo">
@@ -388,6 +392,10 @@
 
                     <div class="partner-logo">
                         <img src="../image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="../image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
                 </div>
             </div>
