--- a/Video.html
+++ b/Video.html
@@ -559,6 +559,10 @@
                     </div>
 
                     <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
+                    </div>
+
+                    <div class="partner-logo">
                         <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
                     </div>
 
@@ -589,6 +593,10 @@
 
                     <div class="partner-logo">
                         <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
                 </div>
             </div>
