--- a/index.html
+++ b/index.html
@@ -438,6 +438,10 @@
                     </div>
 
                     <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
+                    </div>
+
+                    <div class="partner-logo">
                         <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
                     </div>
 
@@ -468,6 +472,10 @@
 
                     <div class="partner-logo">
                         <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
                 </div>
             </div>
