--- a/list-teacher.html
+++ b/list-teacher.html
@@ -255,6 +255,10 @@
                     </div>
 
                     <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
+                    </div>
+
+                    <div class="partner-logo">
                         <img src="image/Logo/taylaimoi-logo.png" alt="Partner Taylaimoi">
                     </div>
 
@@ -285,6 +289,10 @@
 
                     <div class="partner-logo">
                         <img src="image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
                 </div>
             </div>
