--- a/teacher/Dao-xuan-viet.html
+++ b/teacher/Dao-xuan-viet.html
@@ -348,7 +348,11 @@
                     </div>
 
                     <div class="partner-logo">
-                        <img src="image/Logo/omoda.webp" alt="Partner Omoda">
+                        <img src="../image/Logo/omoda.webp" alt="Partner Omoda">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="../image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
 
                     <div class="partner-logo">
@@ -365,7 +369,7 @@
                     </div>
 
                     <div class="partner-logo">
-                        <img src="../image/Logo/Vinfast-logo.png" alt="Partner 2">
+                        <img src="../image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
                     </div>
 
                     <div class="partner-logo">
@@ -382,6 +386,10 @@
 
                     <div class="partner-logo">
                         <img src="../image/Logo/Vinfast-logo.png" alt="Partner Vinfast">
+                    </div>
+
+                    <div class="partner-logo">
+                        <img src="../image/Logo/geleximco-logo.png" alt="Partner Geleximco">
                     </div>
                 </div>
             </div>
